--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ passlib = {extras = ["bcrypt"], version = "^1.7.4"}
 python-multipart = "^0.0.9"
 logging = "^0.4.9.6"
 pyyaml = "^6.0.1"
+sqlalchemy = "^2.0.30"
 
 
 [build-system]
