--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,12 +9,14 @@ services:
     ports:
       - "5432:5432"
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      # - postgres_data:/var/lib/postgresql/data
+      - /data:/data/db
 
   api:
+    image: chacachiene/irrigation:latest
     build: .
+    platform: linux/amd64
     command: bash -c 'while !</dev/tcp/db/5432; do sleep 1; done; alembic upgrade head && uvicorn main:app --host 0.0.0.0 --port 8000 --reload'
-    image: code
     ports:
       - "8000:8000"
     volumes:
